<resources>
    <string name="app_name">SkechyCrag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- BottomBar -->
    <string name="add">Add</string>
    <string name="logBook">LogBook</string>
    <string name="welcome">Welcome</string>
    <string name="account">Please login with your account</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="forgot">I forgot my password</string>
    <string name="login">Login</string>
    <string name="orLogInWith">Or login with</string>
    <string name="search">Search</string>
    <string name="crag_image">cragImage</string>
    <string name="info">Info</string>

    <string-array name="route_options">
        <item>Onsight</item>
        <item>Flash</item>
        <item>Redpoint</item>
    </string-array>

</resources>